crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_spread_jsx.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";
import { useDocumentHead, useLocation } from "@qwik.dev/router";

/**
 * The RouterHead component is placed inside of the document `<head>` element.
 */
export const RouterHead = component$(() => {
  const head = useDocumentHead();
  const loc = useLocation();

  return (
    <>
      <title>{head.title}</title>

      <link rel="canonical" href={loc.href} />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <link rel="icon" type="image/svg+xml" href="/favicon.svg" />

      {head.meta.map((m) => (
        <meta {...m} />
      ))}

      {head.links.map((l) => (
        <link {...l} key={l.key} />
      ))}

      {head.styles.map((s) => (
        <style {...s.props} dangerouslySetInnerHTML={s.style} key={s.key} />
      ))}
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_RouterHead_component_XXXXXXXXXXXX");
/**
 * The RouterHead component is placed inside of the document `<head>` element.
 */ export const RouterHead = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "RouterHead_component_XXXXXXXXXXXX"),
);

=== test.tsx_RouterHead_component_XXXXXXXXXXXX.js === (ENTRY)
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { createElement as _createElement } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { useDocumentHead } from "@qwik.dev/router";
import { useLocation } from "@qwik.dev/router";
export const RouterHead_component_XXXXXXXXXXXX = () => {
  const head = useDocumentHead();
  const loc = useLocation();
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted("title", null, null, head.title, 1, null),
      /* @__PURE__ */ _jsxSorted(
        "link",
        null,
        {
          rel: "canonical",
          href: _wrapProp(loc, "href"),
        },
        null,
        3,
        null,
      ),
      /* @__PURE__ */ _jsxSorted(
        "meta",
        null,
        {
          name: "viewport",
          content: "width=device-width, initial-scale=1.0",
        },
        null,
        3,
        null,
      ),
      /* @__PURE__ */ _jsxSorted(
        "link",
        null,
        {
          rel: "icon",
          type: "image/svg+xml",
          href: "/favicon.svg",
        },
        null,
        3,
        null,
      ),
      head.meta.map((m) =>
        /* @__PURE__ */ _jsxSplit(
          "meta",
          {
            ..._getVarProps(m),
          },
          _getConstProps(m),
          null,
          0,
          "u6_0",
        ),
      ),
      head.links.map((l) =>
        /* @__PURE__ */ _createElement("link", {
          ...l,
          key: l.key,
        }),
      ),
      head.styles.map((s) =>
        /* @__PURE__ */ _createElement("style", {
          ...s.props,
          dangerouslySetInnerHTML: s.style,
          key: s.key,
        }),
      ),
    ],
    1,
    "u6_1",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "RouterHead_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_RouterHead_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_RouterHead_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
