crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_strip_server_code.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import {
  component$,
  serverLoader$,
  serverStuff$,
  $,
  client$,
  useStore,
  useTask$,
} from "@qwik.dev/core";
import { isServer } from "@qwik.dev/core";
import mongo from "mongodb";
import redis from "redis";
import { handler } from "serverless";

export const Parent = component$(() => {
  const state = useStore({
    text: "",
  });

  // Double count watch
  useTask$(async () => {
    if (!isServer) return;
    state.text = await mongo.users();
    redis.set(state.text);
  });

  serverStuff$(async () => {
    // should be removed too
    const a = $(() => {
      // from $(), should not be removed
    });
    const b = client$(() => {
      // from clien$(), should not be removed
    });
    return [a, b];
  });

  serverLoader$(handler);

  useTask$(() => {
    // Code
  });

  return <div onClick$={() => console.log("parent")}>{state.text}</div>;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Parent_component_XXXXXXXXXXXX");
export const Parent = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "s_XXXXXXXXXXXX"),
);

=== test.tsx_Parent_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { serverLoaderQrl } from "@qwik.dev/core";
import { serverStuffQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Parent_component_useTask_1_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Parent_component_useTask_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Parent_component_div_q_e_click_XXXXXXXXXXXX");
export const s_XXXXXXXXXXXX = () => {
  const state = useStore({
    text: "",
  });
  // Double count watch
  useTaskQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "s_XXXXXXXXXXXX", [state]));
  serverStuffQrl(/* @__PURE__ */ _noopQrl("s_r1qAHX7Opp0"));
  serverLoaderQrl(/* @__PURE__ */ _noopQrl("s_k1L0DiPQV1I"));
  useTaskQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "s_XXXXXXXXXXXX"));
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    {
      "q-e:click": /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "s_XXXXXXXXXXXX"),
    },
    _wrapProp(state, "text"),
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "s_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Parent_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Parent_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Parent_component_useTask_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import mongo from "mongodb";
import redis from "redis";
export const s_XXXXXXXXXXXX = async () => {
  const state = _captures[0];
  state.text = await mongo.users();
  redis.set(state.text);
};

/*
{
  "origin": "test.tsx",
  "name": "s_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Parent_component_useTask",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Parent_component_useTask_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "s_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "captureNames": [
    "state"
  ]
}
*/

=== test.tsx_Parent_component_serverStuff_a_XXXXXXXXXXXX.js === (ENTRY)
export const s_XXXXXXXXXXXX = () => {
  // from $(), should not be removed
};

/*
{
  "origin": "test.tsx",
  "name": "s_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverStuff_a",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Parent_component_serverStuff_a_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "s_r1qAHX7Opp0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== test.tsx_Parent_component_serverStuff_b_client_XXXXXXXXXXXX.js === (ENTRY)
export const s_XXXXXXXXXXXX = () => {
  // from clien$(), should not be removed
};

/*
{
  "origin": "test.tsx",
  "name": "s_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverStuff_b_client",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Parent_component_serverStuff_b_client_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "s_r1qAHX7Opp0",
  "ctxKind": "function",
  "ctxName": "client$",
  "captures": false
}
*/

=== test.tsx_Parent_component_useTask_1_XXXXXXXXXXXX.js === (ENTRY)
export const s_XXXXXXXXXXXX = () => {
  // Code
};

/*
{
  "origin": "test.tsx",
  "name": "s_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Parent_component_useTask_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Parent_component_useTask_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "s_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false
}
*/

=== test.tsx_Parent_component_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const s_XXXXXXXXXXXX = () => console.log("parent");

/*
{
  "origin": "test.tsx",
  "name": "s_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Parent_component_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Parent_component_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "s_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
