crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_ts_enums.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore } from "@qwik.dev/core";

export enum Thing {
  A,
  B,
}

export const App = component$(() => {
  console.log(Thing.A);
  return (
    <>
      <p class="stuff">Hello Qwik</p>
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
export var Thing = /* @__PURE__ */ (function (Thing) {
  Thing[(Thing["A"] = 0)] = "A";
  Thing[(Thing["B"] = 1)] = "B";
  return Thing;
})({});
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
export const App_component_XXXXXXXXXXXX = () => {
  console.log(0);
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    /* @__PURE__ */ _jsxSorted(
      "p",
      null,
      {
        class: "stuff",
      },
      "Hello Qwik",
      3,
      null,
    ),
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
